Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <a id="mayonnaisejs-" class="anchor" href="#mayonnaisejs-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>mayonnaise.js <a href="https://www.npmjs.com/package/mayonnaise.js"><img src="https://img.shields.io/npm/v/mayonnaise.js.svg" alt="npm"></a>
 </h1>
 
-<p><img align="right" width="300" src="https://i.ytimg.com/vi/d1JA-nh0IfI/hqdefault.jpg"></p>
-
 <p>Placeholder text for your node.js projects, courtesy of Patrick Star and his wonderful quotations.</p>
+
+<p><img width="300" src="https://i.ytimg.com/vi/d1JA-nh0IfI/hqdefault.jpg"></p>
 
 <h2>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
